@@ -6,6 +6,7 @@ For a detailed list of changes, please see ChangeLog.
  * Enhancements:
 
  * Bug fixes:
+   - Fix pylint warnings and test suite
 
 0.23 (2013-02-12)
 
